--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,17 +28,17 @@
  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
 
  <!-- Animate.css -->
- <link rel="stylesheet" type="text/css" href={% static 'blog/css/animate.css' %}>
+ <link rel="stylesheet" type="text/css" href="{% static 'blog/css/animate.css' %}">
  <!-- Icomoon Icon Fonts-->
- <link rel="stylesheet" type="text/css" href={% static 'blog/css/icomoon.css' %}>
+ <link rel="stylesheet" type="text/css" href="{% static 'blog/css/icomoon.css' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
  <!-- Flexslider  -->
- <link rel="stylesheet" type="text/css" href={% static 'blog/css/flexslider.css' %}>
+ <link rel="stylesheet" type="text/css" href="{% static 'blog/css/flexslider.css' %}">
 
- <link rel="stylesheet" type="text/css" href={% static 'blog/css/style.css' %}>
+ <link rel="stylesheet" type="text/css" href="{% static 'blog/css/style.css' %}">
 
  <!-- Modernizr JS -->
  <script src="{% static 'blog/js/modernizr-2.6.2.min.js' %}"></script>
@@ -138,7 +138,7 @@
   <!-- jQuery Easing -->
   <script src="{% static 'blog/js/jquery.easing.1.3.js' %}"></script>
   <!-- Bootstrap -->
-  <script src="{% static 'blog/js/bootstrap.min.js' %}"</script>
+  <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
   <!-- Waypoints -->
   <script src="{% static 'blog/js/jquery.waypoints.min.js' %}"></script>
   <!-- Counters -->
