--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,153 +1,149 @@
 {% load static %}
 <!DOCTYPE html>
- <html class="no-js"> <!--<![endif]-->
- <head>
- <meta charset="utf-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <title>Cyber Land</title>
- <meta name="viewport" content="width=device-width, initial-scale=1">
- <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
- <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
- <meta name="author" content="FREEHTML5.CO" />
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Title -->
+      {% if title %}
+        <title>Cyber Land - {{title}}</title>
+      {% else %}
+        <title>Cyber Land</title>
+      {% endif %}
 
-   <!-- Facebook and Twitter integration -->
- <meta property="og:title" content=""/>
- <meta property="og:image" content=""/>
- <meta property="og:url" content=""/>
- <meta property="og:site_name" content=""/>
- <meta property="og:description" content=""/>
- <meta name="twitter:title" content="" />
- <meta name="twitter:image" content="" />
- <meta name="twitter:url" content="" />
- <meta name="twitter:card" content="" />
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="{% static 'blog/img/favicon.ico' %}" type="image/x-icon">
 
- <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
- <link rel="shortcut icon" href="favicon.ico">
+    <!-- Font awesome -->
+    <link href="{% static 'blog/css/font-awesome.css' %}" rel="stylesheet">
+    <!-- Bootstrap -->
+    <link href="{% static 'blog/css/bootstrap.css' %}" rel="stylesheet">
+    <!-- Slick slider -->
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/css/slick.css' %}">
+    <!-- Date Picker -->
+    <link rel="stylesheet" type="text/css" href="{% static 'blog/css/bootstrap-datepicker.css' %}">
+    <!-- Fancybox slider -->
+    <link rel="stylesheet" href="{% static 'blog/css/jquery.fancybox.css' %}" type="text/css" media="screen" />
+    <!-- Theme color -->
+    <link id="switcher" href="{% static 'blog/css/theme-color/default-theme.css' %}" rel="stylesheet">
 
- <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
- <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
-
- <!-- Animate.css -->
- <link rel="stylesheet" type="text/css" href="{% static 'blog/css/animate.css' %}">
- <!-- Icomoon Icon Fonts-->
- <link rel="stylesheet" type="text/css" href="{% static 'blog/css/icomoon.css' %}">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!-- Main style sheet -->
+    <link href="{% static 'blog/css/style.css' %}" rel="stylesheet">
 
 
- <!-- Flexslider  -->
- <link rel="stylesheet" type="text/css" href="{% static 'blog/css/flexslider.css' %}">
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Tangerine' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
 
- <link rel="stylesheet" type="text/css" href="{% static 'blog/css/style.css' %}">
 
- <!-- Modernizr JS -->
- <script src="{% static 'blog/js/modernizr-2.6.2.min.js' %}"></script>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js' %}"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js' %}"></script>
+    <![endif]-->
 
- </head>
- <body>
-   <nav id="fh5co-main-nav" role="navigation">
-   		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle active"><i></i></a>
-   		<div class="js-fullheight fh5co-table">
-   			<div class="fh5co-table-cell js-fullheight">
-   				<h1 class="text-center"><a class="fh5co-logo" href="index.html">Words</a></h1>
-   				<ul>
-   					<li><a href="index.html">Home</a></li>
-   					<li><a href="work.html">Work</a></li>
-   					<li><a href="blog.html">Blog</a></li>
-   					<li><a href="about.html">About</a></li>
-   					<li><a href="contact.html">Contact</a></li>
-   				</ul>
-   				<p class="fh5co-social-icon">
-   					<a href="#"><i class="icon-twitter2"></i></a>
-   					<a href="#"><i class="icon-facebook2"></i></a>
-   					<a href="#"><i class="icon-instagram"></i></a>
-   					<a href="#"><i class="icon-dribbble2"></i></a>
-   					<a href="#"><i class="icon-youtube"></i></a>
-   				</p>
-   			</div>
-   		</div>
-   	</nav>
+  </head>
+  <body>
+  <!-- Pre Loader -->
+  <div id="aa-preloader-area">
+    <div class="mu-preloader">
+      <img src="{% static 'blog/img/preloader.gif' %}" alt=" loader img">
+    </div>
+  </div>
+  <!--START SCROLL TOP BUTTON -->
+    <a class="scrollToTop" href="#">
+      <i class="fa fa-angle-up"></i>
+      <span>Top</span>
+    </a>
+  <!-- END SCROLL TOP BUTTON -->
 
-   {% block content %}{% endblock %}
-
-   <footer>
-      <div id="footer">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <h3 class="section-title">About Words</h3>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
-            </div>
-
-            <div class="col-md-3 col-md-push-1">
-              <h3 class="section-title">Links</h3>
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">API</a></li>
-                <li><a href="#">FAQ / Contact</a></li>
+  <!-- Start header section -->
+  <header id="mu-header">
+    <nav class="navbar navbar-default mu-main-navbar" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <!-- LOGO -->
+          <a class="navbar-brand" href="index.html"><img src="{% static 'blog/img/logo.png' %}" alt="Logo img"></a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul id="top-menu" class="nav navbar-nav navbar-right mu-main-nav">
+            <li><a href="#mu-slider">HOME</a></li>
+            <li><a href="#mu-about-us">ABOUT US</a></li>
+            <li><a href="#mu-restaurant-menu">MENU</a></li>
+            <li><a href="#mu-reservation">RESERVATION</a></li>
+            <li><a href="#mu-gallery">GALLERY</a></li>
+            <li><a href="#mu-chef">OUR TEAM</a></li>
+            <li><a href="#mu-latest-news">BLOG</a></li>
+            <li><a href="#mu-contact">CONTACT</a></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">PAGE <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="blog-archive.html">BLOG</a></li>
+                <li><a href="blog-single.html">BLOG DETAILS</a></li>
+                <li><a href="404.html">404 PAGE</a></li>
               </ul>
-            </div>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+  </header>
+  <!-- End header section -->
 
-            <div class="col-md-3">
-              <h3 class="section-title">Information</h3>
-              <ul>
-                <li><a href="#">Terms &amp; Condition</a></li>
-                <li><a href="#">License</a></li>
-                <li><a href="#">Privacy &amp; Policy</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-            <div class="col-md-3">
-              <h3 class="section-title">Newsletter</h3>
-              <p>Subscribe for our newsletter</p>
-              <form class="form-inline" id="fh5co-header-subscribe">
-                <div class="row">
-                  <div class="col-md-12 col-md-offset-0">
-                    <div class="form-group">
-                      <input type="text" class="form-control" id="email" placeholder="Enter your email">
-                      <button type="submit" class="btn btn-default"><i class="icon-paper-plane"></i></button>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
+ {% block content %}{% endblock %}
+
+
+ <!-- Start Footer -->
+  <footer id="mu-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+        <div class="mu-footer-area">
+           <div class="mu-footer-social">
+            <a href="#"><span class="fa fa-facebook"></span></a>
+            <a href="#"><span class="fa fa-twitter"></span></a>
+            <a href="#"><span class="fa fa-google-plus"></span></a>
+            <a href="#"><span class="fa fa-linkedin"></span></a>
+            <a href="#"><span class="fa fa-youtube"></span></a>
           </div>
-          <div class="row copy-right">
-            <div class="col-md-6 col-md-offset-3 text-center">
-              <p class="fh5co-social-icon">
-                <a href="#"><i class="icon-twitter2"></i></a>
-                <a href="#"><i class="icon-facebook2"></i></a>
-                <a href="#"><i class="icon-instagram"></i></a>
-                <a href="#"><i class="icon-dribbble2"></i></a>
-                <a href="#"><i class="icon-youtube"></i></a>
-              </p>
-              <p>Copyright 2016 Free Html5 <a href="#">Words</a>. All Rights Reserved. <br>Made with <i class="icon-heart3"></i> by <a href="http://freehtml5.co/" target="_blank">Freehtml5.co</a> / Demo Images: <a href="http://blog.gessato.com/" target="_blank">Gessato</a></p>
-            </div>
+          <div class="mu-footer-copyright">
+            <p>Designed by <a rel="nofollow" href="http://www.markups.io/">MarkUps.io</a></p>
           </div>
         </div>
       </div>
-    </footer>
+      </div>
+    </div>
+  </footer>
+  <!-- End Footer -->
 
-  </div>
-
-  <!-- jQuery -->
+  <!-- jQuery library -->
   <script src="{% static 'blog/js/jquery.min.js' %}"></script>
-  <!-- jQuery Easing -->
-  <script src="{% static 'blog/js/jquery.easing.1.3.js' %}"></script>
-  <!-- Bootstrap -->
-  <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
-  <!-- Waypoints -->
-  <script src="{% static 'blog/js/jquery.waypoints.min.js' %}"></script>
-  <!-- Counters -->
-  <script src="{% static 'blog/js/jquery.countTo.js' %}"></script>
-  <!-- Flexslider -->
-  <script src="{% static 'blog/js/jquery.flexslider-min.js' %}"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="{% static 'blog/js/bootstrap.js' %}"></script>
+  <!-- Slick slider -->
+  <script type="text/javascript" src="{% static 'blog/js/slick.js' %}"></script>
+  <!-- Counter -->
+  <script type="text/javascript" src="{% static 'blog/js/waypoints.js' %}"></script>
+  <script type="text/javascript" src="{% static 'blog/js/jquery.counterup.js' %}"></script>
+  <!-- Date Picker -->
+  <script type="text/javascript" src="{% static 'blog/js/bootstrap-datepicker.js' %}"></script>
+  <!-- Mixit slider -->
+  <script type="text/javascript" src="{% static 'blog/js/jquery.mixitup.js' %}"></script>
+  <!-- Add fancyBox -->
+  <script type="text/javascript" src="{% static 'blog/js/jquery.fancybox.pack.js' %}"></script>
 
-  <!-- Main JS (Do not remove) -->
-  <script src="{% static 'blog/js/main.js' %}"></script>
+  <!-- Custom js -->
+  <script src="{% static 'blog/js/custom.js' %}"></script>
 
   </body>
- </html>
+</html>
