--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,151 +1,190 @@
 {% extends "blog/base.html" %}
+{% load static %}
 {% block content %}
-<div id="fh5co-page">
-		<header>
-			<div class="container">
-				<div class="fh5co-navbar-brand">
-					<div class="row">
-						<div class="col-xs-6">
 
-							<h1 class="text-left"><a class="fh5co-logo" href="index.html"><span>Blog</span> Words <span>WordPress Theme</span></a></h1>
-						</div>
-						<div class="col-xs-6">
-							<p class="fh5co-social-icon text-right">
-								<a href="#"><i class="icon-twitter2"></i></a>
-								<a href="#"><i class="icon-facebook2"></i></a>
-								<a href="#"><i class="icon-instagram"></i></a>
-								<a href="#"><i class="icon-dribbble2"></i></a>
-								<a href="#"><i class="icon-youtube"></i></a>
-							</p>
-						</div>
-					</div>
-					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-				</div>
-			</div>
-		</header>
-		<aside id="fh5co-hero" class="js-fullheight">
-			<div class="flexslider js-fullheight">
-				<ul class="slides">
-			   	<li style="background-image: url(images/slide_3.jpg);">
-			   		<div class="overlay-gradient"></div>
-			   		<div class="container">
-			   			<div class="col-md-8 col-md-offset-2 col-md-push-4 js-fullheight slider-text">
-			   				<div class="slider-text-inner">
-			   					<div class="desc">
-			   						<span>Read Our Blog</span>
-			   						<h2>Our Blog</h2>
-			   						<p class="fh5co-lead">Designed with <i class="icon-heart3"></i> by the fine folks at <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a></p>
-			   					</div>
-			   				</div>
-			   			</div>
-			   		</div>
-			   	</li>
-			  	</ul>
-		  	</div>
-		</aside>
-		<div id="fh5co-blog" class="fh5co-bg-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<div class="row">
-							{% for post in posts %}
-							<div class="col-md-12">
-								<div class="fh5co-blog animate-box">
-									<a href="#"><img class="img-responsive" src="images/img-4.jpg" alt=""></a>
-									<div class="blog-text">
-										<span class="posted_on">{{ post.date_posted }}</span>
-										<span class="comment"><a href="">By: {{ post.author }}<i class="icon-bubble"></i></a></span>
-										<h3><a href="#">{{ post.title }}</a></h3>
-										<p>{{ post.content }}</p>
-									</div>
-								</div>
-							</div>
-								{% endfor %}
-							<div class="col-md-12">
-								<div class="fh5co-blog animate-box">
-									<a href="#"><img class="img-responsive" src="images/img-2.jpg" alt=""></a>
-									<div class="blog-text">
-										<span class="posted_on">Nov. 15th</span>
-										<span class="comment"><a href="">21<i class="icon-bubble"></i></a></span>
-										<h3><a href="#">Download Bundle Templates 2017</a></h3>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="row">
-							<div class="col-md-12">
-								<div class="fh5co-blog animate-box">
-									<a href="#"><img class="img-responsive" src="images/img-2.jpg" alt=""></a>
-									<div class="blog-text">
-										<span class="posted_on">Nov. 15th</span>
-										<span class="comment"><a href="">21<i class="icon-bubble"></i></a></span>
-										<h3><a href="#">Download Bundle Templates 2017</a></h3>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="fh5co-blog animate-box">
-									<a href="#"><img class="img-responsive" src="images/img-5.jpg" alt=""></a>
-									<div class="blog-text">
-										<span class="posted_on">Nov. 15th</span>
-										<span class="comment"><a href="">21<i class="icon-bubble"></i></a></span>
-										<h3><a href="#">Inspirational Website</a></h3>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="row">
-							<div class="col-md-12">
-								<div class="fh5co-blog animate-box">
-									<a href="#"><img class="img-responsive" src="images/img-3.jpg" alt=""></a>
-									<div class="blog-text">
-										<span class="posted_on">Nov. 15th</span>
-										<span class="comment"><a href="">21<i class="icon-bubble"></i></a></span>
-										<h3><a href="#">Inspirational Website</a></h3>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="fh5co-blog animate-box">
-									<a href="#"><img class="img-responsive" src="images/img-6.jpg" alt=""></a>
-									<div class="blog-text">
-										<span class="posted_on">Nov. 15th</span>
-										<span class="comment"><a href="">21<i class="icon-bubble"></i></a></span>
-										<h3><a href="#">Get Free Template</a></h3>
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div class="fh5co-counters" style="background-image: url(images/hero.jpg);" data-stellar-background-ratio="0.5" id="counter-animate">
-			<div class="fh5co-narrow-content animate-box">
-				<div class="row" >
-					<div class="col-md-4 text-center">
-						<span class="fh5co-counter js-counter" data-from="0" data-to="7520" data-speed="5000" data-refresh-interval="50"></span>
-						<span class="fh5co-counter-label">Project</span>
-					</div>
-					<div class="col-md-4 text-center">
-						<span class="fh5co-counter js-counter" data-from="0" data-to="5450" data-speed="5000" data-refresh-interval="50"></span>
-						<span class="fh5co-counter-label">Clients</span>
-					</div>
-					<div class="col-md-4 text-center">
-						<span class="fh5co-counter js-counter" data-from="0" data-to="6876" data-speed="5000" data-refresh-interval="50"></span>
-						<span class="fh5co-counter-label">Satisfied Client</span>
-					</div>
-				</div>
-			</div>
-		</div>
+  <!-- Start Blog banner  -->
+  <section id="mu-blog-banner">
+    <div class="container">
+      <div class="mu-blog-banner-area">
+        <h2>Blog</h2>
+        <ol class="breadcrumb">
+          <li><a href="index.html">Home</a></li>          
+          <li class="active">Blog</li>
+        </ol>
+      </div>
+    </div>
+  </section>
+  <!-- End Blog banner -->  
+  
+  <!-- Start Blog -->
+  <section id="mu-blog">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="mu-blog-area">
+            <div class="row">
+              <div class="col-md-8 col-sm-8">
+                <div class="mu-blog-content">
+                  <!-- Start Single blog item -->
+                  <article class="mu-news-single">
+                    <h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, distinctio!</a></h3>
+                    <figure class="mu-news-img">
+                      <a href="#"><img src="{% static 'blog/img/news/1.jpg' %}" alt="img"></a>                      
+                    </figure>
+                    <div class="mu-news-single-content">                      
+                      <ul class="mu-meta-nav">
+                        <li>By Admin</li>
+                        <li>Date: May 10 2016</li>
+                      </ul>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio est quaerat magnam exercitationem voluptas, voluptatem sed quam ab laborum voluptatum tempore dolores itaque, molestias vitae.</p>
+                      <div class="mu-news-single-bottom">
+                        <a href="#" class="mu-readmore-btn">Read More</a>
+                      </div>
+                    </div>                   
+                  </article>
+                  <!-- End Single blog item -->
+                  <!-- Start Single blog item -->
+                  <article class="mu-news-single">
+                    <h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, distinctio!</a></h3>
+                    <figure class="mu-news-img">
+                      <a href="#"><img src="{% static 'blog/img/news/2.jpg' %}" alt="img"></a>                      
+                    </figure>
+                    <div class="mu-news-single-content">                      
+                      <ul class="mu-meta-nav">
+                        <li>By Admin</li>
+                        <li>Date: May 10 2016</li>
+                      </ul>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio est quaerat magnam exercitationem voluptas, voluptatem sed quam ab laborum voluptatum tempore dolores itaque, molestias vitae.</p>
+                      <div class="mu-news-single-bottom">
+                        <a href="#" class="mu-readmore-btn">Read More</a>
+                      </div>
+                    </div>                   
+                  </article>
+                  <!-- End Single blog item -->
+                  <!-- Start Single blog item -->
+                  <article class="mu-news-single">
+                    <h3><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, distinctio!</a></h3>
+                    <figure class="mu-news-img">
+                      <a href="#"><img src="{% static 'blog/img/news/3.jpg' %}" alt="img"></a>                      
+                    </figure>
+                    <div class="mu-news-single-content">                      
+                      <ul class="mu-meta-nav">
+                        <li>By Admin</li>
+                        <li>Date: May 10 2016</li>
+                      </ul>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio est quaerat magnam exercitationem voluptas, voluptatem sed quam ab laborum voluptatum tempore dolores itaque, molestias vitae.</p>
+                      <div class="mu-news-single-bottom">
+                        <a href="#" class="mu-readmore-btn">Read More</a>
+                      </div>
+                    </div>                   
+                  </article>
+                  <!-- End Single blog item -->
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="mu-blog-pagination-area">
+                      <nav>
+                        <ul class="mu-blog-pagination">
+                          <li>
+                            <a href="#" aria-label="Previous">
+                              <span class="fa fa-long-arrow-left"></span>
+                            </a>
+                          </li>
+                          <li><a href="#">1</a></li>
+                          <li><a href="#">2</a></li>
+                          <li class="active"><a href="#">3</a></li>
+                          <li><a href="#">4</a></li>
+                          <li><a href="#">5</a></li>
+                          <li>
+                            <a href="#" aria-label="Next">
+                              <span class="fa fa-long-arrow-right"></span>
+                            </a>
+                          </li>
+                        </ul>
+                      </nav>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Start Blog Sidebar -->
+              <div class="col-md-4 col-sm-4">             
+                <aside class="mu-blog-sidebar">
+                  <!-- Blog Sidebar Single -->
+                  <div class="mu-blog-sidebar-single">
+                    <h3>Categories</h3>
+                    <ul class="mu-catg-nav">
+                      <li><a href="#">Cake</a></li>
+                      <li><a href="#">Pizza</a></li>
+                      <li><a href="#">Drinks</a></li>
+                      <li><a href="#">Dessert</a></li>
+                      <li><a href="#">Chicken</a></li>
+                      <li><a href="#">Beef</a></li>
+                      <li><a href="#">Mutton</a></li>
+                    </ul>
+                  </div>
+                  <!-- End Blog Sidebar Single -->
+                  <!-- Blog Sidebar Single -->
+                  <div class="mu-blog-sidebar-single">
+                    <h3>Recent News</h3>
+                    <ul class="mu-recent-news-nav">
+                      <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, ipsum!</a></li>
+                      <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, ipsum!</a></li>
+                      <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, ipsum!</a></li>
+                      <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, ipsum!</a></li>
+                      <li><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione, ipsum!</a></li>
+                    </ul>
+                  </div>
+                  <!-- End Blog Sidebar Single -->
+                  <!-- Blog Sidebar Single -->
+                  <div class="mu-blog-sidebar-single">
+                    <h3>Tags</h3>
+                    <div class="tag-cloud">
+                      <a href="#">Cake</a>
+                      <a href="#">Pizza</a>
+                      <a href="#">Drinks</a>
+                      <a href="#">Dessert</a>
+                      <a href="#">Chicken</a>
+                      <a href="#">Beef</a>
+                      <a href="#">Mutton</a>                      
+                    </div>
+                  </div>
+                  <!-- End Blog Sidebar Single -->
+                  <!-- Blog Sidebar Single -->
+                  <div class="mu-blog-sidebar-single">                    
+                    <a href="#" class="mu-sidebar-add">
+                      <img src="{% static 'blog/img/banner-ads.jpg' %}" alt="img">
+                    </a>
+                  </div>
+                  <!-- End Blog Sidebar Single -->
+                </aside>
+              </div>
+              <!-- End Blog Sidebar -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Blog -->
+  
+  <!-- Footer -->
+  <footer id="mu-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+        <div class="mu-footer-area">
+           <div class="mu-footer-social">
+            <a href="#"><span class="fa fa-facebook"></span></a>
+            <a href="#"><span class="fa fa-twitter"></span></a>
+            <a href="#"><span class="fa fa-google-plus"></span></a>
+            <a href="#"><span class="fa fa-linkedin"></span></a>
+            <a href="#"><span class="fa fa-youtube"></span></a>
+          </div>
+          <div class="mu-footer-copyright">
+            <p>Designed by <a rel="nofollow" href="http://www.markups.io/">MarkUps.io</a></p>
+          </div>         
+        </div>
+      </div>
+      </div>
+    </div>
 {% endblock content %}
