--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,7 +9,7 @@
       {% if title %}
         <title>Cyber Land - {{title}}</title>
       {% else %}
-        <title>Cyber Land</title>
+        <title>Cyber Donjon</title>
       {% endif %}
 
     <!-- Favicon -->
@@ -73,24 +73,20 @@
             <span class="icon-bar"></span>
           </button>
           <!-- LOGO -->
-          <a class="navbar-brand" href="index.html"><img src="{% static 'blog/img/logo.png' %}" alt="Logo img"></a>
+          <a class="navbar-brand" href="{% url 'blog-home' %}" id="logo"><img src="{% static 'blog/img/logo.png' %}" alt="Logo img"></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right mu-main-nav">
-            <li><a href="#mu-slider">HOME</a></li>
-            <li><a href="#mu-about-us">ABOUT US</a></li>
-            <li><a href="#mu-restaurant-menu">MENU</a></li>
-            <li><a href="#mu-reservation">RESERVATION</a></li>
-            <li><a href="#mu-gallery">GALLERY</a></li>
-            <li><a href="#mu-chef">OUR TEAM</a></li>
-            <li><a href="#mu-latest-news">BLOG</a></li>
-            <li><a href="#mu-contact">CONTACT</a></li>
+            <li><a href="{% url 'blog-home' %}">HOME</a></li>
+            <li><a href="{% url 'blog-blog' %}">BLOG</a></li>
+            <li><a href="#mu-restaurant-menu">WORK</a></li>
+            <li><a href="#mu-reservation">ABOUT ME</a></li>
+            <li><a href="{% url 'blog-contact' %}">CONTACT</a></li>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">PAGE <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">JOIN DONJON <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="blog-archive.html">BLOG</a></li>
-                <li><a href="blog-single.html">BLOG DETAILS</a></li>
-                <li><a href="404.html">404 PAGE</a></li>
+                <li><a href="blog-archive.html">Sign UP</a></li>
+                <li><a href="blog-single.html">Log In</a></li>
               </ul>
             </li>
           </ul>
@@ -114,10 +110,10 @@
             <a href="#"><span class="fa fa-twitter"></span></a>
             <a href="#"><span class="fa fa-google-plus"></span></a>
             <a href="#"><span class="fa fa-linkedin"></span></a>
-            <a href="#"><span class="fa fa-youtube"></span></a>
+            <a href="#"><span class="fa fa-github"></span></a>
           </div>
           <div class="mu-footer-copyright">
-            <p>Designed by <a rel="nofollow" href="http://www.markups.io/">MarkUps.io</a></p>
+            <p>Designed by <a rel="nofollow" href="http://www.markups.io/">Ritvik Dayal</a></p>
           </div>
         </div>
       </div>
