--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,33 +2,37 @@
 {% load crispy_forms_tags %}
 {% block content %}
       <div id="login-box" style="margin-top:150px;">
-        <form>
+
   <div class="left">
+      <form method="POST">
     <h1>Sign up</h1>
     {% csrf_token %}
     <table>
       <tr>
         <td>
           <label for="username">First Name: </label>
-          {{form.first_name|crispy}}
+          {{form.first_name}}
         </td>
         <td>
           <label for="username">Last Name: </label>
-          {{form.last_name|crispy}}
+          {{form.last_name}}
         </td>
         </tr>
     </table>
     <label for="username">Username: </label>
-    {{form.username|crispy}}
+    {{form.username}}
     <label for="email">Email: </label>
     {{form.email}}
     <label for="password1">Password: </label>
-    {{form.password1|crispy}}
+    {{form.password1}}
     <label for="password2">Re-type Password: </label>
-    {{form.password2|crispy}}
+    {{form.password2}}
 
     <input type="submit" name="signup_submit" value="Sign me up" />
+    <p class="text-muted" style="padding-top: 5px; font-size: 12px;">Already have an account?<a href="#">Sign In</a></p>
+    </form>
   </div>
+
 
   <div class="right">
     <span class="loginwith">Sign in with<br />social network</span>
@@ -38,7 +42,7 @@
     <button class="social-signin google">Log in with Google+</button>
   </div>
   <div class="or">OR</div>
-  <form>
+
 </div>
 
 <style media="screen">
