--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -37,7 +37,6 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Prata' rel='stylesheet' type='text/css'>
 
-
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -85,7 +84,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="blog-archive.html">JOIN DONJON <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="blog-archive.html">Sign UP</a></li>
+                <li><a href="{% url 'blog-register' %}">Sign UP</a></li>
                 <li><a href="blog-single.html">Log In</a></li>
               </ul>
             </li>
@@ -95,6 +94,14 @@
     </nav>
   </header>
   <!-- End header section -->
+
+  {%if messages %}
+  {% for message in messages %}
+  <div class="alert alert-{{ message.tags }}">
+    {{ message }}
+  </div>
+  {% endfor %}
+  {% endif%}
 
  {% block content %}{% endblock %}
 
